--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,26 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.box {
+  position: relative;
+}
+.box::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 5px;
+  padding: 1px;
+  background: linear-gradient(90deg, #b19122 0%, #f4c31c 39.48%);
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
+}
+
+/* border: 1px solid;
+
+border-image-source: linear-gradient(90deg, #B19122 0%, #F4C31C 39.48%);
+ */
