--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,7 @@ a {
   -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: destination-out;
   mask-composite: exclude;
+  border-radius: 12px;
 }
 
 .circleNumber {
@@ -103,4 +104,27 @@ a {
   -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: destination-out;
   mask-composite: exclude;
+  border-radius: 12px;
+}
+
+.customGridInFanvestor2 {
+  position: relative;
+  transition: all 250ms ease-in-out;
+  background: #282402;
+}
+
+.customGridInFanvestor2::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 5px;
+  padding: 1px;
+  background: linear-gradient(90deg, #b19122 0%, #f4c31c 39.48%);
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
+  border-radius: 12px;
 }
